Tweaking snapshot and hero to try avoid overflow scroll

--- a/modules/widgets/hero/hero.scss
+++ b/modules/widgets/hero/hero.scss
@@ -77,7 +77,7 @@ $3dsize: 6px;
 
 
   &.hero {
-    min-height: 300px;
+    min-height: 305px;
 
     .background {
       position: absolute;
