--- a/modules/widgets/snapshot/snapshot.scss
+++ b/modules/widgets/snapshot/snapshot.scss
@@ -143,7 +143,7 @@ $module: '.snapshot';
   }
 
   h3 {
-    margin: 4px 0;
+    margin: 4px 0 1px;
     font: {
       size: 1em !important;
     }
